<resources>
    <string name="app_name">Mahem</string>
    <string name="title_categories">Categories</string>
    <string name="title_search">جستجو</string>
    <string name="title_add">Add</string>
    <string name="title_home">Home</string>
    <string name="title_menu">Menu</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">ثبت نام</string>
    <string name="register_page_header">برای ثبت نام کافیست شماره همراه یا ایمیل معتبر وارد نمایید تا کد فعالسازی برایتان ارسال شود</string>
    <string name="code_verification_header">لطفا برای تکمیل ثبت نام در ماهم کد 4 رقمی فعال سازی را وارد کنید</string>
    <string name="final_register">تایید نهایی</string>
    <string name="verify_code">کد تایید 4 رقمی</string>
    <string name="userName">نام کاربری</string>
    <string name="phoneOrEmail">شماره همراه یا ایمیل معتبر</string>
    <string name="farsi">فارسی</string>
    <string name="english">انگلیسی</string>
    <string name="chooseLanguage">انتخاب زبان :</string>
    <string name="chooseCity">انتخاب شهر</string>
    <string name="chooseBackGround">انتخاب پس زمینه</string>
    <string name="camera">دوربین</string>
    <string name="gallery">گالری</string>
    <string name="title">عنوان</string>
    <string name="time">زمان انتشار</string>
    <string name="AboutUs_title">درباره ی ما</string>
    <string name="About_exp1">ماهم، اولین اپلیکیشن در سطح استان گلستان فعالیت خود را از
سال 1397 با موضوع کاریابی و نیازمندیهای آنلاین و بانک مشاغل
و تخفیف یاب شروع کرده است و هدف اصلی آن حذف واسطه و
تسهیل در امر خرید  و فروش و در ارتباط قراردادن خریدار با فروشنده به صورت مستقیم است.</string>
    <string name="About_exp2">در ماهم، خرید و فروش کاربران مستقیما انجام می پذیرد و از معاملات کاربران هیچگونه سودی عاید ماهم نمی گردد.</string>
    <string name="About_mean">ماهم، به زبان ترکی به معنی ماه من است. </string>
    <string name="Ads_title">آگهی ها</string>
    <string name="Ads_search">جستجو برای...</string>
    <string name="Ads_Report">گزارش مشکل آگهی</string>
    <string name="chat">چت</string>
    <string name="call_inf">اطلاعات تماس</string>
    <string name="Amlak_title">املاک</string>
    <string name="home_sell">فروش مسکونی</string>
    <string name="home_rent">رهن و اجاره مسکونی</string>
    <string name="office_sell">فروش اداری و تجاری</string>
    <string name="office_rent">رهن و اجاره اداری و تجاری</string>
    <string name="aghd">عقد مشارکت / امورمالی و حقوقی</string>
    <string name="other">خرید،فروش،اجاره زمین کشاورزی و باغ</string>
    <string name="aparteman">آپارتمان</string>
    <string name="home">خانه و ویلا</string>
    <string name="zamin">زمین</string>
    <string name="shop">مغازه</string>
    <string name="office">دفترکار،واحد اداری و مطب</string>
    <string name="tejari">صنعتی و تجاری</string>
    <string name="Ads_panel">پنل آگهی های نشان شده</string>
    <string name="Contact_atten">       هشدارپلیس : لطفا پیش از انجام معامله و هرنوع پرداخت وجه ، از صحت کالا یا خدمات ارائه شده ، به صورت حضوری اطمینان حاصل نمایید.</string>
    <string name="Contact_exit">بیخیال</string>
    <string name="ContactUs_title">تماس با ما</string>
    <string name="Contact_exp1">جهت پیشنهاد یا انتقاد و یا گزارش وجود مشکل در اپلیکیشن ماهم می توانید به روش های زیر مارا یاری کنید:</string>
    <string name="Contact_exp2">آی دی تلگرام :Mahem_App</string>
    <string name="Contact_exp3">آدرس ایمیل :Mahem_App@Gmail.Com</string>
    <string name="Contact_exp4">تیم مدیریت و پشتیبانی ماهم در حال حاضر در تهران اقامت دارند
اما اقدامات لازم جهت انتقال دفتر به گنبد کاووس در دست اقدام
بوده و آدرس دقیق دفتر در گنبد کاووس اعلام خواهد شد.</string>
    <string name="Contact_exp5">
در صورت ایجاد مزاحمت برای شما ، می توانید با مراجعه به سایت
پلیس فتا به آدرس www.cyberpolice.ir از اطلاعات تماس
پلیس فتای محل سکونت خود آگاه شوید و موضوع را از آن طریق پیگیری کنید.</string>
    <string name="Electric_title">لوازم الکترونیکی</string>
    <string name="tablet">موبایل و تبلت</string>
    <string name="net">رایانه و اینترنت</string>
    <string name="soti">صوتی و تصویری</string>
    <string name="console">کنسول بازی و باری های آنلاین</string>
    <string name="other_elec">سایر لوازم الکترونیکی</string>
    <string name="laptop">کامپیوتر رو میزی / لپ تاپ </string>
    <string name="Janebi">قطعات و لوازم جانبی کامپیوتر</string>
    <string name="printer">پرینتر / اسکنر / کپی و فکس</string>
    <string name="modem">مودم و تجهیزات شبکه</string>
    <string name="camera_elec">دوربین عکاسی و فیلم برداری</string>
    <string name="System_soti">سیستم صوتی</string>
    <string name="TV">تلویزیون و پروژکتور</string>
    <string name="DVD">ویدیو و پخش کننده DVD</string>
    <string name="other_soti">سایر صوتی و تصویری</string>
    <string name="mobile">گوشی موبایل </string>
    <string name="tablet_tab">تبلت</string>
    <string name="LavazemJanebi">لوازم جانبی موبایل و تبلت</string>
    <string name="simcard">تلفن رومیزی و سیم کارت</string>
    <string name="Estekhdami_title">استخدامی</string>
    <string name="fani">فنی / مهندسی</string>
    <string name="monshi">منشی</string>
    <string name="nurse">پزشک / پرستار</string>
    <string name="edari">اداری / مدیریت</string>
    <string name="teach"> آموزش (مدرس)</string>
    <string name="mali">مالی و حسابداری /حقوقی</string>
    <string name="seller">فروشنده / بازاریاب</string>
    <string name="seraydar">سرایدار / نظافت / نگهبانی</string>
    <string name="resturan">رستوران / صندوقدار</string>
    <string name="kar_sakhteman">کارهای ساختمانی</string>
    <string name="art">هنری / رسانه / تبلیغات</string>
    <string name="beauty">زیبایی / بهداشتی / درمانی</string>
    <string name="computer">رایانه / فناوری اطلاعات</string>
    <string name="haml">حمل و نقل / باربری</string>
    <string name="other_este">سایر استخدامی</string>
    <string name="filter_title">فیلتر</string>
    <string name="newest">جدید ترین</string>
    <string name="expensive">گران ترین</string>
    <string name="cheap">ارزان ترین</string>
    <string name="done">اعمال</string>
    <string name="Gharardad">نوع قرارداد</string>
    <string name="EducationLevel">میزان تحصیلات</string>
    <string name="situation">تعیین موقعیت</string>
    <string name="pic">نمایش فقط آگهی های عکس دار</string>
    <string name="Group_fani">مهندسی /فنی </string>
    <string name="rooms">تعیین تعداد اتاق</string>
    <string name="meter">تعیین متراژ</string>
    <string name="Type_Ads">نوع آگهی</string>
    <string name="Gheimat">تعیین قیمت</string>
    <string name="hoome">حومه شهر</string>
    <string name="rahn">رهن</string>
    <string name="ejareh">   اجاره</string>
    <string name="Enter_rahn">رهن را وارد کنید.</string>
    <string name="Enter_ejareh">اجاره را وارد کنید.</string>
    <string name="rahn_To_ejareh">قابلیت تبدیل رهن به اجاره</string>
    <string name="Toman">مبلغ را به تومان وارد کنید.</string>
    <string name="enter">تایید</string>
    <string name="Group_car">وسایل نقلیه</string>
    <string name="brand">برند</string>
    <string name="year">تعیین سال ساخت</string>
    <string name="K_meter">تعیین کارکرد</string>
    <string name="home_title">لوازم خانگی</string>
    <string name="khadamat_title">خدمات</string>
    <string name="tajhizat_title">تجهیزات و عمده فروشی</string>
    <string name="sargarmi_title">سرگرمی و فراغت</string>
    <string name="personal_title">وسایل شخصی</string>
    <string name="Group_title">دسته بندی</string>
    <string name="choose_group">انتخاب گروه</string>
    <string name="carpet">فرش / گلیم</string>
    <string name="chair">مبلمان / میز / صندلی</string>
    <string name="lostr">لوستر / لوازم روشنایی</string>
    <string name="commode">کمد و بوفه / کابینت</string>
    <string name="parde">پرده / رومیزی</string>
    <string name="bed">تخت / سرویس خواب</string>
    <string name="decor">دکوری /آثار هنری</string>
    <string name="TV_desk">میز تلویزیون</string>
    <string name="fan">سیستم گرمایشی و سرمایشی</string>
    <string name="other_home_design">سایر وسایل و تزئینات خانه</string>
    <string name="kitchen">وسایل آشپزخانه</string>
    <string name="design">وسایل و تزئینات خانه</string>
    <string name="freezer">یخچال و فریزر</string>
    <string name="gas">ماکروویو و گاز</string>
    <string name="other_naghlieh">سایر</string>
    <string name="weekend">تخفیف آخر هفته</string>
    <string name="cafe">رستوران و کافی شاپ</string>
    <string name="arayesh_off">آرایشی بهداشتی</string>
    <string name="health">سلامتی و پزشکی</string>
    <string name="tafrih">تفریحی و ورزشی</string>
    <string name="LavazemJanebi_off">لوازم جانبی</string>
    <string name="khodro">لوازم خودرو و ابزار</string>
    <string name="zivar">زیورآلات</string>
    <string name="kitchen_off">ظروف آشپزخانه و خانه</string>
    <string name="teach_off">آموزش</string>
    <string name="art_off">هنر و تئاتر</string>
    <string name="hotel">هتل و سفر</string>
    <string name="lavazem_safar">لوازم سفر</string>
    <string name="pooshak">پوشاک</string>
    <string name="lavazemTahrir">لوازم التحریر</string>
    <string name="City1">گنبد کاووس</string>
    <string name="City2">گرگان</string>
    <string name="City3">علی آباد</string>
    <string name="City4">کلاله</string>
    <string name="City5">آزادشهر</string>
    <string name="City6">کردکوی</string>
    <string name="City7">آق قلا</string>
    <string name="City8">مینودشت</string>
    <string name="City9">بندر ترکمن</string>
    <string name="City10">رامیان</string>
    <string name="City11">مراوه تپه</string>
    <string name="City12">گالیکش</string>
    <string name="City13">بندر گز</string>
    <string name="City14">گمیشان</string>
    <string name="brn1">آیودی</string>
    <string name="brn2">آریسان</string>
    <string name="brn3">)زوتی(آریو</string>
    <string name="brn4">آلفا رومیو</string>
    <string name="brn5">اپل</string>
    <string name="brn6">ام جی</string>
    <string name="brn7">ام وی ام</string>
    <string name="brn8">ایسوزو</string>
    <string name="brn9">بایک</string>
    <string name="brn10">برلیانس</string>
    <string name="brn11">بسترن</string>
    <string name="brn12">بنز</string>
    <string name="brn13">بی ام و</string>
    <string name="brn14">بی وای دی</string>
    <string name="brn15">پاژن</string>
    <string name="brn16">پراید</string>
    <string name="brn17">پرتون</string>
    <string name="brn18">پژو</string>
    <string name="brn19">پورشه</string>
    <string name="brn20">پیکان</string>
    <string name="brn21">تویوتا</string>
    <string name="brn22">تیبا</string>
    <string name="brn23">جک</string>
    <string name="brn24">جیپ</string>
    <string name="brn25">جیلی</string>
    <string name="brn26">چانگان</string>
    <string name="brn27">چری</string>
    <string name="brn28">H30 Cross( اچ سی کراس ) دانگ فنگ</string>
    <string name="brn29">دنا</string>
    <string name="brn30">دوو</string>
    <string name="brn31">دی اس</string>
    <string name="brn32">رانا</string>
    <string name="brn33">رنو</string>
    <string name="brn34">سانگ یانگ</string>
    <string name="brn35">ساینا</string>
    <string name="brn36">سمند</string>
    <string name="brn37">سوبارو</string>
    <string name="brn38">سوزوکی</string>
    <string name="brn39">سیتروین</string>
    <string name="brn40">فاو</string>
    <string name="brn41">فولکس واگن</string>
    <string name="brn42">فیات</string>
    <string name="brn43">کاپرا</string>
    <string name="brn44">کیا</string>
    <string name="brn45">گریت وال</string>
    <string name="brn46">لکسوس</string>
    <string name="brn47">لند مارک</string>
    <string name="brn48">لندرور</string>
    <string name="brn49">لیفان</string>
    <string name="brn50">مازراتی</string>
    <string name="brn51">مزدا</string>
    <string name="brn52">میتسوبیشی</string>
    <string name="brn53">نیسان</string>
    <string name="brn54">ولوو</string>
    <string name="brn55">هایما</string>
    <string name="brn56">هوندا</string>
    <string name="brn57">هیوندای</string>
    <string name="brn58">دیگر</string>
</resources>