<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/other"
        android:title="@string/other_naghlieh"/>
    <item android:id="@+id/pen"
        android:title="@string/lavazemTahrir"/>
    <item android:id="@+id/cloth"
        android:title="@string/pooshak"/>
    <item android:id="@+id/trip"
        android:title="@string/lavazem_safar"/>
    <item android:id="@+id/hotel"
        android:title="@string/hotel"/>
    <item android:id="@+id/service"
        android:title="@string/khadamat_title"/>
    <item android:id="@+id/teather"
        android:title="@string/art_off"/>
    <item android:id="@+id/edu"
        android:title="@string/teach_off"/>
    <item android:id="@+id/kitchen"
        android:title="@string/kitchen_off"/>
    <item android:id="@+id/jewerly"
        android:title="@string/zivar"/>
    <item android:id="@+id/car"
        android:title="@string/khodro"/>
    <item android:id="@+id/pretty"
        android:title="@string/arayesh_off"/>
    <item android:id="@+id/things"
        android:title="@string/LavazemJanebi_off"/>
    <item android:id="@+id/sport"
        android:title="@string/tafrih"/>
    <item android:id="@+id/medicine"
        android:title="@string/health"/>
    <item android:id="@+id/cafe"
        android:title="@string/cafe"/>
    <item android:id="@+id/weekend"
        android:title="@string/weekend"/>
</menu>