<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/gonbad"
        android:orderInCategory="1"
        android:title="@string/City1"
        android:showAsAction="never"
        tools:ignore="AppCompatResource"/>
    <item
        android:id="@+id/gorgan"
        android:orderInCategory="1"
        android:title="@string/City2"
        android:showAsAction="never"
        tools:ignore="AppCompatResource"/>
    <item
        android:id="@+id/aliabad"
        android:orderInCategory="1"
        android:title="@string/City3"
        android:showAsAction="never"
        tools:ignore="AppCompatResource"/>
    <item
        android:id="@+id/kalale"
        android:orderInCategory="1"
        android:title="@string/City4"
        android:showAsAction="never"
        tools:ignore="AppCompatResource"/>
    <item
        android:id="@+id/azadshahr"
        android:orderInCategory="1"
        android:title="@string/City5"
        android:showAsAction="never"
        tools:ignore="AppCompatResource"/>
    <item
        android:id="@+id/kordkoy"
        android:orderInCategory="1"
        android:title="@string/City6"
        android:showAsAction="never"
        tools:ignore="AppCompatResource"/>
    <item
        android:id="@+id/agh_ghola"
        android:orderInCategory="1"
        android:title="@string/City7"
        android:showAsAction="never"
        tools:ignore="AppCompatResource"/>
    <item
        android:id="@+id/mino"
        android:orderInCategory="1"
        android:title="@string/City8"
        android:showAsAction="never"
        tools:ignore="AppCompatResource"/>
    <item
        android:id="@+id/torkaman"
        android:orderInCategory="1"
        android:title="@string/City9"
        android:showAsAction="never"
        tools:ignore="AppCompatResource"/>
    <item
        android:id="@+id/ramian"
        android:orderInCategory="1"
        android:title="@string/City10"
        android:showAsAction="never"
        tools:ignore="AppCompatResource"/>
    <item
        android:id="@+id/marave"
        android:orderInCategory="1"
        android:title="@string/City11"
        android:showAsAction="never"
        tools:ignore="AppCompatResource"/>
    <item
        android:id="@+id/galikesh"
        android:orderInCategory="1"
        android:title="@string/City12"
        android:showAsAction="never"
        tools:ignore="AppCompatResource"/>
    <item
        android:id="@+id/gaz"
        android:orderInCategory="1"
        android:title="@string/City13"
        android:showAsAction="never"
        tools:ignore="AppCompatResource"/>
    <item
        android:id="@+id/gomishan"
        android:orderInCategory="1"
        android:title="@string/City14"
        android:showAsAction="never"
        tools:ignore="AppCompatResource"/>

</menu>