<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingRight="10dp"
    android:paddingLeft="10dp"
    >


    <TextView
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:background="@drawable/popup_background"
        android:text="@string/City1"
        android:gravity="center"
        android:textSize="15dp"
        android:padding="10dp"
        android:id="@+id/Tt1"
        />

    <TextView
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:background="@drawable/popup_background"
        android:text="@string/City2"
        android:gravity="center"
        android:textSize="15dp"
        android:padding="10dp"
        android:id="@+id/Tt2"
        />
    <TextView
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:background="@drawable/popup_background"
        android:text="@string/City3"
        android:gravity="center"
        android:textSize="15dp"
        android:padding="10dp"
        android:id="@+id/Tt3"
        />
    <TextView
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:background="@drawable/popup_background"
        android:text="@string/City4"
        android:gravity="center"
        android:textSize="15dp"
        android:padding="10dp"
        android:id="@+id/Tt4"
        />
    <TextView
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:background="@drawable/popup_background"
        android:text="@string/City5"
        android:gravity="center"
        android:textSize="15dp"
        android:padding="10dp"
        android:id="@+id/Tt5"
        />
    <TextView
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:background="@drawable/popup_background"
        android:text="@string/City6"
        android:gravity="center"
        android:textSize="15dp"
        android:padding="10dp"
        android:id="@+id/Tt6"
        />
    <TextView
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:background="@drawable/popup_background"
        android:text="@string/City7"
        android:gravity="center"
        android:textSize="15dp"
        android:padding="10dp"
        android:id="@+id/Tt7"
        />
    <TextView
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:background="@drawable/popup_background"
        android:text="@string/City8"
        android:gravity="center"
        android:textSize="15dp"
        android:padding="10dp"
        android:id="@+id/Tt8"
        />
    <TextView
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:background="@drawable/popup_background"
        android:text="@string/City9"
        android:gravity="center"
        android:textSize="15dp"
        android:padding="10dp"
        android:id="@+id/Tt9"
        />
    <TextView
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:background="@drawable/popup_background"
        android:text="@string/City10"
        android:gravity="center"
        android:textSize="15dp"
        android:padding="10dp"
        android:id="@+id/Tt10"
        />
    <TextView
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:background="@drawable/popup_background"
        android:text="@string/City11"
        android:gravity="center"
        android:textSize="15dp"
        android:padding="10dp"
        android:id="@+id/Tt11"
        />
    <TextView
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:background="@drawable/popup_background"
        android:text="@string/City12"
        android:gravity="center"
        android:textSize="15dp"
        android:padding="10dp"
        android:id="@+id/Tt12"
        />
    <TextView
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:background="@drawable/popup_background"
        android:text="@string/City13"
        android:gravity="center"
        android:textSize="15dp"
        android:padding="10dp"
        android:id="@+id/Tt13"
        />
    <TextView
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:background="@drawable/popup_background"
        android:text="@string/City14"
        android:gravity="center"
        android:textSize="15dp"
        android:padding="10dp"
        android:id="@+id/Tt14"
        />
</LinearLayout>
</ScrollView>
